// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders a variety of strings correctly empty string 1`] = `
<a
  class="css-4pi1z-StyledLink eygprlc0"
  href=""
>
  Empty string
</a>
`;

exports[`Link component renders a variety of strings correctly external URL 1`] = `
<a
  class="css-4pi1z-StyledLink eygprlc0"
  href="http://mongodb.com"
>
  MongoDB Company
</a>
`;

exports[`Link component renders a variety of strings correctly internal link 1`] = `
<a
  class="test-class css-1m971tq-AsInternalLink-StyledLink eygprlc1"
  href="/drivers/c/"
>
  C Driver
</a>
`;
